@@ -1,3 +1,7 @@
+2005-07-03  Kouhei Yanagita <sugi@dream.big.or.jp>
+	* style/default/html_formatter.rb (token_to_s): a double quote for
+	colspan is lacked.
+
 2005-07-02  Kazuhiko  <kazuhiko@fdiary.net>
 	* template/adminform.html: revise HTML (reported by Fu).
 
